# moontest

./: .gitignore  README.md  hello.py  pyproject.toml
src/: ui_tester.py
src/moontest/: __init__.py  moontest.py
tests/: conftest.py  test_scenarios.py
tests/test_pages/static/passing/simple_button/: index.html  styles.css
