[project]
name = "moontest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moondream>=0.0.6",
    "playwright>=1.49.1",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
